kubernetes/apps/monitoring/thanos/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: thanos
  namespace: monitoring
spec:
  parentRefs:
    - name: cilium-ingressgateway
      namespace: ingress
  hostnames: ["thanos.${DOMAIN}"]
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: thanos-query-frontend
          port: 9090
          weight: 1
