kubernetes/apps/monitoring/thanos/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: "thanos.${DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: thanos-query-frontend
            port:
              number: 9090
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "thanos.${DOMAIN}"
